[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Tuberculos/Remolacha.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DropableInjert.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="DropableInjert" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource( 2 )

[node name="Root" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_DropableInjert_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DropableInjert_area_exited"]
[connection signal="input_event" from="." to="." method="_on_DropableInjert_input_event"]
